--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Levi",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
     "mongodb": "^2.2.5",
+    "mongoose": "^5.1.3",
     "save": "^2.3.2"
   }
 }
