--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.2",
     "lodash": "^4.17.10",
     "mongodb": "^2.2.5",
     "mongoose": "^5.1.3",
-    "save": "^2.3.2"
+    "save": "^2.3.2",
+    "validator": "^10.2.0"
   }
 }
